--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
     <title>InkSect Tattoo Studio</title>
 </head>
+
 <body>
-    <h1>erase</h1>
+    <header>
+        <div class="img-container">
+            <img src="img/logo.png" alt="">
+        </div>
+        <div class="text-container">
+            <div class="content">
+                <h1>Inksect Tattoo Studio</h1>
+                <p>Tatuajes, perforaciones y productos de excelente calidad.</p>
+                <a href="#portafolio" class="cta">Ver Portafolio</a>
+            </div>
+        </div>
+    </header>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
