--- a/index.html
+++ b/index.html
@@ -20,10 +20,28 @@
             <div class="content">
                 <h1>Inksect Tattoo Studio</h1>
                 <p>Tatuajes, perforaciones y productos de excelente calidad.</p>
-                <a href="#portafolio" class="cta">Ver Portafolio</a>
+                <a href="#portfolio" class="cta">Ver Portafolio</a>
             </div>
         </div>
     </header>
+    <section id="portfolio">
+        <h1>Conoce Nuestro Trabajo</h1>
+        <div class="gallery">
+            <div class="card"><img src="img/img1.jpg" alt=""></div>
+            <div class="card"><img src="img/img2.jpg" alt=""></div>
+            <div class="card"><img src="img/img3.jpg" alt=""></div>
+            <div class="card"><img src="img/img4.jpg" alt=""></div>
+            <div class="card"><img src="img/img5.jpg" alt=""></div>
+            <div class="card"><img src="img/img6.jpg" alt=""></div>
+            <div class="card"><img src="img/img7.jpg" alt=""></div>
+            <div class="card"><img src="img/img8.jpg" alt=""></div>
+        </div>
+        <div class="ctas">
+            <a class="contactCta" href="#contact">Contactanos</a>
+            <a class="teamCta" href="#team">Nuestro equipo</a>
+        </div>
+    </section>
+
     <script src="js/index.js"></script>
 </body>
 
