Modal created for desktop devices

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>InkSect Tattoo Studio</title>
 </head>
 
@@ -39,6 +40,14 @@
         <div class="ctas">
             <a class="contactCta" href="#contact">Contactanos</a>
             <a class="teamCta" href="#team">Nuestro equipo</a>
+        </div>
+        <div class="modal">
+            <i class='bx bx-x'></i>
+            <div class="content">
+                <i class='bx bx-left-arrow-alt'></i>
+                <img src="img/img1.jpg" alt="">
+                <i class='bx bx-right-arrow-alt'></i>
+            </div>
         </div>
     </section>
 
