Team section is created succesfully and is reponsive too for mobile devices and desktop

--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         </div>
     </section>
 
+    <section id="team">
+        <h1>Conoce nuestro equipo</h1>
+        <div class="cards">
+            <div class="card">
+                <div class="img andrea">
+                </div>
+                <div class="text-content">
+                    <h2>Andrea Ruiz</h2>
+                    <p>Tatuador y fundador de Inksect.</p>
+                </div>
+                <a href="www.instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
+            </div>
+            <div class="card jhon">
+                <div class="img jhon">
+                </div>
+                <div class="text-content">
+                    <h2>Jhon Cap</h2>
+                    <p>Perforador.</p>
+                </div>
+                <a href="www.instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
+            </div>
+        </div>
+    </section>
+
     <script src="js/index.js"></script>
 </body>
 
