--- a/index.html
+++ b/index.html
@@ -74,8 +74,33 @@
             </div>
         </div>
     </section>
+    <section id="contact">
+        <div class="form">
+            <h1>Contacto</h1>
+            <p>Contactanos para cotizar tus diseños o si quieres obtener mas información de nuestros servicios.</p>
+            <div class="form-group">
+                <input class="form_field" type="text" placeholder="Nombre" name="name" required>
+                <label for="name" class="form__label">Nombre</label>
+            </div>
+            <div class="form-group correo">
+                <input class="form_field" type="email" placeholder="Correo" name="correo" required>
+                <label for="correo" class="form__label">Correo</label>
+            </div>
+            <a class="cta">Enviar</a>
+            <div class="social-media">
+                <a href=""><i class='bx bxl-whatsapp' ></i></a>
+                <a href=""><i class='bx bxl-facebook-circle'></i></a>
+                <a href=""><i class='bx bxl-instagram'></i></a>
+            </div>
+        </div>
+        <div class="ubication">
+            <p>Estamos ubicados en la carrera X N xxx-xxx por xxxx en Medellín.</p>
+            <div id="map"></div>
+        </div>
+    </section>
 
     <script src="js/index.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 </body>
 
 </html>
