footer created with developer info

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             <div id="map"></div>
         </div>
     </section>
+    <footer>
+        <p>Pagina web diseñada y desarrollada por Yeison Builes Uribe, ver mas sobre su perfil profesional en <a target="_blank" href="https://github.com/BuilesYeison">Github</a> o <a target="_blank" href="https://www.linkedin.com/in/builesyeison/">LinkedIn</a>.
+            <br>Todos los derechos reservados.</p>
+    </footer>
+   
 
     <script src="js/index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
