Gellery and img size updated for mobile devices

--- a/index.html
+++ b/index.html
@@ -25,87 +25,93 @@
             </div>
         </div>
     </header>
-    <section id="portfolio">
-        <h1>Conoce Nuestro Trabajo</h1>
-        <div class="gallery">
-            <div class="card"><img src="img/img1.jpg" alt=""></div>
-            <div class="card"><img src="img/img2.jpg" alt=""></div>
-            <div class="card"><img src="img/img3.jpg" alt=""></div>
-            <div class="card"><img src="img/img4.jpg" alt=""></div>
-            <div class="card"><img src="img/img5.jpg" alt=""></div>
-            <div class="card"><img src="img/img6.jpg" alt=""></div>
-            <div class="card"><img src="img/img7.jpg" alt=""></div>
-            <div class="card"><img src="img/img8.jpg" alt=""></div>
-        </div>
-        <div class="ctas">
-            <a class="contactCta" href="#contact">Contactanos</a>
-            <a class="teamCta" href="#team">Nuestro equipo</a>
-        </div>
-        <div class="modal">
-            <i class='bx bx-x'></i>
-            <div class="content">
-                <i class='bx bx-left-arrow-alt'></i>
-                <img src="img/img1.jpg" alt="">
-                <i class='bx bx-right-arrow-alt'></i>
+    <main>
+        <section id="portfolio">
+            <h1>Conoce Nuestro Trabajo</h1>
+            <div class="gallery">
+                <div class="card"><img src="img/img1.jpg" alt=""></div>
+                <div class="card"><img src="img/img2.jpg" alt=""></div>
+                <div class="card"><img src="img/img3.jpg" alt=""></div>
+                <div class="card"><img src="img/img4.jpg" alt=""></div>
+                <div class="card"><img src="img/img5.jpg" alt=""></div>
+                <div class="card"><img src="img/img6.jpg" alt=""></div>
+                <div class="card"><img src="img/img7.jpg" alt=""></div>
+                <div class="card"><img src="img/img8.jpg" alt=""></div>
             </div>
-        </div>
-    </section>
+            <div class="ctas">
+                <a class="contactCta" href="#contact">Contactanos</a>
+                <a class="teamCta" href="#team">Nuestro equipo</a>
+            </div>
+            <div class="modal">
+                <i class='bx bx-x'></i>
+                <div class="content">
+                    <i class='bx bx-left-arrow-alt'></i>
+                    <img src="img/img1.jpg" alt="">
+                    <i class='bx bx-right-arrow-alt'></i>
+                </div>
+            </div>
+        </section>
 
-    <section id="team">
-        <h1>Conoce nuestro equipo</h1>
-        <div class="cards">
-            <div class="card">
-                <div class="img andrea">
+        <section id="team">
+            <h1>Conoce nuestro equipo</h1>
+            <div class="cards">
+                <div class="card">
+                    <div class="img andrea">
+                    </div>
+                    <div class="text-content">
+                        <h2>Andrea Ruiz</h2>
+                        <p>Tatuador y fundador de Inksect.</p>
+                    </div>
+                    <a href="www.instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
                 </div>
-                <div class="text-content">
-                    <h2>Andrea Ruiz</h2>
-                    <p>Tatuador y fundador de Inksect.</p>
+                <div class="card jhon">
+                    <div class="img jhon">
+                    </div>
+                    <div class="text-content">
+                        <h2>Jhon Cap</h2>
+                        <p>Perforador.</p>
+                    </div>
+                    <a href="www.instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
                 </div>
-                <a href="www.instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
             </div>
-            <div class="card jhon">
-                <div class="img jhon">
+        </section>
+        <section id="contact">
+            <div class="form">
+                <h1>Contacto</h1>
+                <p>Contactanos para cotizar tus diseños o si quieres obtener mas información de nuestros servicios.</p>
+                <div class="form-group">
+                    <input class="form_field" type="text" placeholder="Nombre" name="name" required>
+                    <label for="name" class="form__label">Nombre</label>
                 </div>
-                <div class="text-content">
-                    <h2>Jhon Cap</h2>
-                    <p>Perforador.</p>
+                <div class="form-group correo">
+                    <input class="form_field" type="email" placeholder="Correo" name="correo" required>
+                    <label for="correo" class="form__label">Correo</label>
                 </div>
-                <a href="www.instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a class="cta">Enviar</a>
+                <div class="social-media">
+                    <a href=""><i class='bx bxl-whatsapp'></i></a>
+                    <a href=""><i class='bx bxl-facebook-circle'></i></a>
+                    <a href=""><i class='bx bxl-instagram'></i></a>
+                </div>
             </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="form">
-            <h1>Contacto</h1>
-            <p>Contactanos para cotizar tus diseños o si quieres obtener mas información de nuestros servicios.</p>
-            <div class="form-group">
-                <input class="form_field" type="text" placeholder="Nombre" name="name" required>
-                <label for="name" class="form__label">Nombre</label>
+            <div class="ubication">
+                <p>Estamos ubicados en la carrera X N xxx-xxx por xxxx en Medellín.</p>
+                <div id="map"></div>
             </div>
-            <div class="form-group correo">
-                <input class="form_field" type="email" placeholder="Correo" name="correo" required>
-                <label for="correo" class="form__label">Correo</label>
-            </div>
-            <a class="cta">Enviar</a>
-            <div class="social-media">
-                <a href=""><i class='bx bxl-whatsapp' ></i></a>
-                <a href=""><i class='bx bxl-facebook-circle'></i></a>
-                <a href=""><i class='bx bxl-instagram'></i></a>
-            </div>
-        </div>
-        <div class="ubication">
-            <p>Estamos ubicados en la carrera X N xxx-xxx por xxxx en Medellín.</p>
-            <div id="map"></div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
-        <p>Pagina web diseñada y desarrollada por Yeison Builes Uribe, ver mas sobre su perfil profesional en <a target="_blank" href="https://github.com/BuilesYeison">Github</a> o <a target="_blank" href="https://www.linkedin.com/in/builesyeison/">LinkedIn</a>.
+        <p>Pagina web diseñada y desarrollada por Yeison Builes Uribe, ver mas sobre su perfil profesional en <a
+                target="_blank" href="https://github.com/BuilesYeison">Github</a> o <a target="_blank"
+                href="https://www.linkedin.com/in/builesyeison/">LinkedIn</a>.
             <br>Todos los derechos reservados.</p>
     </footer>
-   
+
 
     <script src="js/index.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
+    </script>
 </body>
 
 </html>
